--- a/wp-content/themes/maria/scss/_arbetsprover.scss
+++ b/wp-content/themes/maria/scss/_arbetsprover.scss
@@ -1,22 +1,29 @@
 .worksampletypes{
     .container{
-        display: flex;
-        justify-content: space-between;
-        padding: 100px;
-        align-items: baseline;
-        gap: 40px;
+     padding-top: 100px;
+     padding-bottom: 100px;
+     display: grid;
+     grid-template-columns: minmax(250px, 1fr) minmax(250px, 1fr) minmax(250px, 1fr) minmax(250px, 1fr);
     }
     .worksampletype{
         color: $color-nav-text;
         text-decoration: none;
         width: 203px;
         font-family: Arial, Helvetica, sans-serif;
+        transition: background-color 0.3s ease;
+        padding: 15px;
+        margin: -15px;
+        border-radius: 8%;
+        &:hover {
+            background-color: #D5D9C8;
+        }
     }
-    a:hover{
-        background:rgba(213, 217, 200, 0.4) ;
-        padding: 10px 10px 10px 10px ;
-        border-radius: 8px;
+    .pictures {
+        max-width: 210px;
+        height: 108px;
+        border-radius: 5px;
     }
+    
     p{
         color:#061D25;
         font-size: 16px;
