--- a/wp-content/themes/maria/scss/_post.scss
+++ b/wp-content/themes/maria/scss/_post.scss
@@ -1,5 +1,65 @@
-.inlagg{
-    .container{
-        width: 1280px;
+.posts {
+  .posts-grid {
+    display: grid;
+    grid-template-columns: minmax(250px, 1fr) minmax(250px, 1fr);
+    grid-gap: 20px;
+    max-width: 1020px;
+    margin: 0 auto;
+  }
+  .grid-item {
+    text-align: center;
+    background-color: transparent;
+    transition: background-color 0.3s ease;
+    padding: 15px;
+    margin: -15px;
+    border-radius: 15px;
+    &:hover {
+        background-color: #D5D9C8;
     }
+    .texter {
+      font-family: Arial, Helvetica, sans-serif;
+      color: black;
+      width: 480px;
+      h2 {
+        font-weight: bold;
+        font-size: 17px;
+        text-align: left;
+      }
+
+      p {
+        font-size: 16px;
+        text-align: left;
+      }
+    }
+  }
+  img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+  }
+  .post_btn {
+    background: $color-nav-text;
+    color: white;
+    border-radius: 7px;
+    width: 133px;
+    height: 37px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 50px;
+
+  }
+  .text_tag{
+    color: white;
+    background-color: #D89771;
+    border-radius: 60px;
+    width: 96px;
+    height: 34px;
+    font-size: 12px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
