--- a/wp-content/themes/maria/scss/style.scss
+++ b/wp-content/themes/maria/scss/style.scss
@@ -23,7 +23,7 @@ a {
 }
 
 .container {
-    max-width: 1280px;
+    max-width: 1020px;
     margin: 0 auto;
 }
 
@@ -58,9 +58,19 @@ a {
     margin-top: 10px;
 }
 
+h1{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
+}
+
 @import "home";
 @import "hero";
 @import "logos";
 @import "arbetsprover";
 @import "testimonials";
 @import "post";
+@import "footer";
+
+@import"bocker";
+@import"omMaria";
