--- a/wp-content/themes/maria/scss/_arbetsprover.scss
+++ b/wp-content/themes/maria/scss/_arbetsprover.scss
@@ -1,32 +1,46 @@
-.worksampletypes{
-    .container{
-     padding-top: 100px;
-     padding-bottom: 100px;
-     display: grid;
-     grid-template-columns: minmax(250px, 1fr) minmax(250px, 1fr) minmax(250px, 1fr) minmax(250px, 1fr);
+.worksampletypes {
+  .arbetsprover-grid {
+    padding-top: 10px;
+    padding-bottom: 100px;
+    display: grid;
+    grid-template-columns:
+      minmax(250px, 1fr) minmax(250px, 1fr) minmax(250px, 1fr)
+      minmax(250px, 1fr);
+  }
+  .worksampletype {
+    color: $color-nav-text;
+    text-decoration: none;
+    width: 203px;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: background-color 0.3s ease;
+    padding: 15px;
+    margin: -15px;
+    border-radius: 8%;
+    &:hover {
+      background-color: #d5d9c8;
     }
-    .worksampletype{
-        color: $color-nav-text;
-        text-decoration: none;
-        width: 203px;
-        font-family: Arial, Helvetica, sans-serif;
-        transition: background-color 0.3s ease;
-        padding: 15px;
-        margin: -15px;
-        border-radius: 8%;
-        &:hover {
-            background-color: #D5D9C8;
-        }
+  }
+  .pictures {
+    max-width: 210px;
+    height: 108px;
+    border-radius: 5px;
+  }
+
+  p {
+    color: #061d25;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .worksampletypes {
+   
+    .arbetsprover-grid {
+      padding-bottom: 0px;
+      display: block;
+      text-align: center;
     }
-    .pictures {
-        max-width: 210px;
-        height: 108px;
-        border-radius: 5px;
-    }
-    
-    p{
-        color:#061D25;
-        font-size: 16px;
-        font-family: Arial, Helvetica, sans-serif;
-    }
+   
+  }
 }
