--- a/wp-content/themes/maria/scss/_bocker.scss
+++ b/wp-content/themes/maria/scss/_bocker.scss
@@ -1,44 +1,61 @@
 .bocker {
-  .title{
+  .title {
     margin-top: 100px;
-    h1{
+    h1 {
       margin-bottom: 50px;
     }
   }
-  .left{
+  .left {
     width: 265px;
   }
-  .right{
+  .right {
     font-family: Arial, Helvetica, sans-serif;
     width: 885px;
     line-height: 25px;
     text-align: justify;
 
-    .rubrik{
+    .rubrik {
       font-size: 16px;
       font-weight: bold;
       font-family: Arial, Helvetica, sans-serif;
     }
-    .review{
+    .review {
       font-size: 16px;
       font-family: Arial, Helvetica, sans-serif;
     }
-    img{
+    img {
       margin-top: 50px;
     }
-    .paragr{
+    .paragr {
       width: 455px;
     }
   }
   .bocker-grid {
     display: flex;
-    grid-template-columns:minmax(50px, 1fr) minmax(250px, 1fr);
+    grid-template-columns: minmax(50px, 1fr) minmax(250px, 1fr);
     grid-gap: 95px;
     max-width: 1020px;
     margin: 0 auto;
     margin-bottom: 200px;
   }
-  a{
-      color: #bf5933;
+  a {
+    color: #bf5933;
+  }
+}
+@media screen and (max-width: 768px) {
+  .bocker {
+    .title{
+      margin-top: 50px;
+    }
+    .bocker-grid {
+      display: block;
+     
+    }
+    .right{
+      width: auto;
+      .paragr{
+        width: auto;
+      }
+    }
   }
 }
