--- a/wp-content/themes/maria/scss/_hero.scss
+++ b/wp-content/themes/maria/scss/_hero.scss
@@ -4,51 +4,95 @@
     display: flex;
     justify-content: space-between;
     max-width: 1020px;
-    .bild {
-      width: 473px;
-      height: 534px;
-      margin-right: 160px;
-    }
-    h1 {
-      font-size: 22px;
-      font-weight: bold;
-      font-family: Helvetica, Arial, sans-serif;
-    }
-    p {
-      font-size: 16px;
-      font-family: Helvetica, Arial, sans-serif;
-    }
-    a {
-      color: #bf5933;
-    }
-    .newsletter {
-        form{
-            display: flex;
-            justify-content: space-between;
-        }
-      width: 95%;
-      border-radius: 8px;
-      border: 2px solid black;
-      padding: 5px 5px 5px 20px;
-      margin: 40px 0;
-      input {
-        font-family: Helvetica, Arial, sans-serif;
-        border: none;
-        outline: none;
-        font-size: 15px;
-        background: transparent;
+    .left {
+      .bild {
+        width: 473px;
+        height: 534px;
+        margin-right: 120px;
       }
-      button{
-        padding: 10px 16px;
-        border: none;
-        cursor: pointer;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 15px;
-        border-radius: 6px;
-        color: #FFFFFF;
-        background-color: #061D25;
-        width: 108px;
-        height: 37px;
+    }
+    .right {
+      h1 {
+        font-size: 20px;
+        font-weight: bold;
+        font-family: Helvetica, Arial, sans-serif;
+      }
+      p {
+        font-size: 16px;
+        width: fit-content;
+        line-height: 25px;
+        text-align: center;
+      }
+      a {
+        color: #bf5933;
+      }
+      .newsletter {
+        form {
+          display: flex;
+          justify-content: space-between;
+        }
+        width: 95%;
+        border-radius: 8px;
+        border: 2px solid black;
+        padding: 5px 5px 5px 20px;
+        margin: 40px 0;
+        input {
+          font-family: Helvetica, Arial, sans-serif;
+          border: none;
+          outline: none;
+          font-size: 15px;
+          background: transparent;
+        }
+        button {
+          padding: 10px 16px;
+          border: none;
+          cursor: pointer;
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 15px;
+          border-radius: 6px;
+          color: #ffffff;
+          background-color: #061d25;
+          width: 108px;
+          height: 37px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero {
+    padding: 0;
+    .container {
+      flex-direction: column;
+      .right{
+        p{
+          font-size: 14px;
+          font-family: Helvetica, Arial, sans-serif;
+          width: 425px;
+          line-height: 22px;
+          text-align: center;
+        } 
+        h1{
+        text-align: center;
+        margin-top: 50px;
+        font-size: 20px;
+        margin-bottom: 50px;
+      }
+     
+      .newsletter{
+        width: 85%;
+        border-radius: 8px;
+        border: 2px solid black;
+        margin-left: 20px;
+      }
+    }
+      .left{
+        .bild{
+          width: 344px;
+          height: 358px;
+          padding-left: 35px;
+        }
       }
     }
   }
