--- a/wp-content/themes/maria/scss/_logos.scss
+++ b/wp-content/themes/maria/scss/_logos.scss
@@ -4,10 +4,25 @@
         justify-content: space-between;
         padding: 100px;
         align-items: center;
+        margin-bottom: 50px;
     }
     img {
         width: 100%;
         max-width: 120px;
         height: auto;
     }
+}
+
+@media screen and (max-width: 430px) {
+    .logos{
+        .container{
+            display: flex;
+            align-items: center;
+            margin-bottom: 50px;
+            gap: 20px;
+            margin-top: 100px;
+            margin-bottom: 100px;
+            padding: 0;
+        }
+}
 }
