--- a/wp-content/themes/maria/scss/_omMaria.scss
+++ b/wp-content/themes/maria/scss/_omMaria.scss
@@ -1,42 +1,71 @@
-.histories{
-    .rubrik {
-        margin-top: 125px;
-        font-size: 16px;
-        font-weight: bold;
-        font-family: Arial, Helvetica, sans-serif;
+.histories {
+  .rubrik {
+    margin-top: 125px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .left {
+    width: 715px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 22px;
+    a {
+      color: #bf5933;
     }
-    .left {
-        width: 715px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 16px;
-        line-height: 22px;
-        a {
-            color: #bf5933;
-        }
+  }
+  .right {
+    .image {
+      border-radius: 200px;
+      margin-top: 130px;
+      margin-left: 200px;
     }
-    .right {
-        .image {
-            border-radius: 200px;
-            margin-top: 130px;
-            margin-left: 200px;
-        }
-        .paragraf{
-            width: 550px;
-        }
+    .paragraf {
+      width: 550px;
     }
-    .paragraf{
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 16px;
-        line-height: 25px;
-        width: 390px;
-    }
-    .histories-grid {
-      display: grid;
-      grid-template-columns: minmax(250px, 1fr) minmax(250px, 1fr);
-      grid-gap: 100px;
-      max-width: 1020px;
-      margin: 0 auto;
-    }
+  }
+  .paragraf {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 25px;
+    width: 390px;
+  }
+  .histories-grid {
+    display: grid;
+    grid-template-columns: minmax(250px, 1fr) minmax(250px, 1fr);
+    grid-gap: 100px;
+    max-width: 1020px;
+    margin: 0 auto;
+  }
 }
 
-
+@media screen and (max-width: 768px) {
+    body{
+        width: 95%;
+        overflow-x: hidden;
+    }
+  .histories {
+    text-align: center;
+    flex-direction: column;
+    padding: 0;
+    .right {
+      .image {
+        visibility: hidden;
+        display: none;
+      }
+      .paragraf{
+        width: auto;
+      }
+    }
+    .histories-grid{
+        display: block;
+    }
+    .left{
+        line-height: 25px;
+        width: min-content;
+    }
+    .rubrik{
+        margin-top: 50px;
+    }
+  }
+}
