--- a/wp-content/themes/maria/scss/_testimonials.scss
+++ b/wp-content/themes/maria/scss/_testimonials.scss
@@ -8,14 +8,14 @@
       );
     padding-top: 100px;
     padding-bottom: 100px;
-    gap:150px;
-    margin-bottom:100px;
+    gap: 150px;
+    margin-bottom: 100px;
   }
   .texter {
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
-    .paragraph{
-        width: 245px;
+    .paragraph {
+      width: 245px;
     }
     .title {
       font-weight: bold;
@@ -26,5 +26,34 @@
     max-width: 120px;
     height: auto;
     margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .testimonial {
+    img{
+      margin-bottom: 30px;
+    }
+    .container{
+      text-align: center;
+    }
+    background-color: #d5d9c824;
+    .texter{
+      .paragraph{
+        width: auto;
+        text-align: center;
+      }
+      .title{
+        font-weight: bold;
+        text-align: center;
+      }
+    }
+    .container {
+      display: block;
+      padding-top: 100px;
+      padding-bottom: 100px;
+      gap: 150px;
+      margin-bottom: 100px;
+    }
   }
 }
