Fixed arbetsprover page.

--- a/wp-content/themes/maria/scss/_arbetsprover.scss
+++ b/wp-content/themes/maria/scss/_arbetsprover.scss
@@ -1,4 +1,5 @@
 .worksampletypes {
+  .container{
   .arbetsprover-grid {
     padding-top: 10px;
     padding-bottom: 100px;
@@ -32,7 +33,7 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 }
-
+}
 @media screen and (max-width: 430px) {
   .worksampletypes {
    
