--- a/wp-content/themes/maria/scss/_omMaria.scss
+++ b/wp-content/themes/maria/scss/_omMaria.scss
@@ -39,7 +39,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 430px) {
     body{
         width: 95%;
         overflow-x: hidden;
@@ -66,6 +66,30 @@
     }
     .rubrik{
         margin-top: 50px;
+    }
+  }
+}
+
+@media screen and (min-width: 431px) and (max-width: 1024px) {
+  .histories{
+    .histories-grid{
+      display: block;
+      text-align: center;
+      margin-left: 100px;
+      .paragraf{
+        margin-left: 65px;
+      }
+    }
+    .right {
+      .image {
+        visibility: hidden;
+        display: none;
+      }
+    }
+    .left{
+      .paragraf{
+        margin-left: 150px;
+      }
     }
   }
 }
