--- a/wp-content/themes/maria/scss/style.scss
+++ b/wp-content/themes/maria/scss/style.scss
@@ -12,83 +12,122 @@ Text Domain: blank
 
 $primary: royalblue;
 $color-custom: #d5d9c824;
-$color-nav-text: #061D25;
+$color-nav-text: #061d25;
 
 body {
-    background-color: $color-custom;
+  background-color: $color-custom;
 }
 
 a {
-    color: black;
+  color: black;
+  text-decoration: none;
+  list-style: none;
 }
 
 .container {
-    max-width: 1020px;
-    margin: 0 auto;
+  max-width: 1020px;
+  margin: 0 auto;
 }
 
 .site-header {
-    padding: 0 100px;
-    .container{
-        display: flex;
-        justify-content: space-between;
+  padding: 0 100px;
+  &.collapsed {
+    
+  }
+  &:not(.collapsed) {
+    
+  }
+  .container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .main-nav {
+    flex-grow: 1;
+    .menu {
+      list-style: none;
+      display: flex;
+      font-size: 12px;
+      font-family: Helvetica, Arial, sans-serif;
+      gap: 40px;
     }
-    .main-nav {
-        flex-grow: 1;
-        .menu{
-            list-style: none;
-            display: flex;
-            font-size: 12px;
-            font-family:Helvetica, Arial, sans-serif;
-            gap: 40px;
-           
-        }
-    }
+  }
 }
 
 .menu a {
- text-decoration: none;
- color: $color-nav-text;
- font-weight: bold;
+  text-decoration: none;
+  color: $color-nav-text;
+  font-weight: bold;
 }
 
-.social-nav{
-    display: flex;
-    gap: 20px;
-    margin-top: 10px;
+.social-nav {
+  display: flex;
+  gap: 20px;
+  margin-top: 10px;
 }
 
-h1{
-    font-weight: bold;
+h1 {
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px;
+}
+
+/* Post page */
+.categories {
+  display: ruby;
+  text-decoration: none;
+  list-style: none;
+  gap: 20px;
+
+  a {
+    color: #d89771;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
+    font-size: 16px;
+    margin-left: 10px;
+  }
+}
+
+.posts {
+    margin-top: 100px;
+  .categorie {
+    font-size: 16px;
+    font-weight: bold;
+    display: ruby;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    body{
-        width: 100%;
-        overflow-x: hidden;
-    }
+  body {
+    width: 100%;
+    overflow-x: hidden;
+  }
 
-    .site-header {
-        padding: 0 10px; 
-    }
-    .main-nav{
-        visibility: hidden;
-        display: none;
-    }
+  .site-header {
+    padding: 0 10px;
+  }
+  .main-nav {
+    visibility: hidden;
+    display: none;
+  }
 
-    .menu {
-        flex-direction: column; 
-        visibility: hidden;
-        display: none;
-    }
+  .menu {
+    flex-direction: column;
+    visibility: hidden;
+    display: none;
+  }
 
-    .social-nav{
-        visibility: hidden;
-        display: none;
-    }
+  .social-nav {
+    visibility: hidden;
+    display: none;
+  }
 }
+
+@media screen and (min-width: 431px) and (max-width: 1024px) {
+    .social-nav {
+        visibility: hidden;
+        display: none;
+      }
+}
+
 
 @import "home";
 @import "hero";
@@ -98,5 +137,6 @@ h1{
 @import "post";
 @import "footer";
 
-@import"bocker";
-@import"omMaria";
+@import "bocker";
+@import "omMaria";
+@import "index";
