--- a/wp-content/themes/maria/scss/style.scss
+++ b/wp-content/themes/maria/scss/style.scss
@@ -31,7 +31,7 @@ a {
 
 .site-header {
   padding: 0 100px;
- 
+
   .container {
     display: flex;
     justify-content: space-between;
@@ -59,7 +59,12 @@ a {
   gap: 20px;
   margin-top: 10px;
 }
-
+#nav-toggle {
+  display: flex;
+  margin-top: 10px;
+  visibility: hidden;
+  display: none;
+}
 h1 {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
@@ -82,46 +87,84 @@ h1 {
 }
 
 .posts {
-    margin-top: 100px;
+  margin-top: 100px;
   .categorie {
     font-size: 16px;
     font-weight: bold;
     display: ruby;
   }
 }
+.mobile-menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 999;
+}
 
-@media screen and (max-width: 768px) {
-  body {
-    width: 100%;
-    overflow-x: hidden;
-  }
+.mobile-nav {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
+.mobile-nav ul {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
+
+.mobile-nav ul li {
+  margin-bottom: 20px;
+}
+
+.mobile-nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.mobile-menu.active {
+  display: block;
+}
+
+@media (min-width: 375px ) and (max-width: 992px) {
   .site-header {
-    padding: 0 10px;
+    padding: 0;
+  }
+  .social-nav {
+    display: none;
+    visibility: none;
   }
   .main-nav {
     visibility: hidden;
     display: none;
   }
-
-  .menu {
-    flex-direction: column;
-    visibility: hidden;
-    display: none;
+  #nav-toggle {
+    display: flex;
+    margin-top: 10px;
+    visibility: visible;
   }
-
-  .social-nav {
-    visibility: hidden;
-    display: none;
-  }
-}
-
-@media screen and (min-width: 431px) and (max-width: 1024px) {
-    .social-nav {
-        visibility: hidden;
-        display: none;
+  .hero {
+    padding: 0;
+    text-align: center;
+    .container {
+      flex-direction: column;
+      .left {
+        width: 100%;
+        height: auto;
       }
+    }
+  }
+  h1 {
+    text-align: center;
+  }
 }
+
 
 
 @import "home";
@@ -134,4 +177,4 @@ h1 {
 @import "bocker";
 @import "omMaria";
 @import "index";
-@import "archive-arbetsprov"
+@import "archive-arbetsprov";
