--- a/wp-content/themes/maria/scss/_omMaria.scss
+++ b/wp-content/themes/maria/scss/_omMaria.scss
@@ -45,10 +45,12 @@
       display: block;
     }
     .right {
+      .maria-img{
       .image {
         visibility: hidden;
         display: none;
       }
+    }
       .paragraf {
         width: auto;
         text-align: center;
