--- a/wp-content/themes/maria/scss/style.scss
+++ b/wp-content/themes/maria/scss/style.scss
@@ -65,6 +65,15 @@ a {
   visibility: hidden;
   display: none;
 }
+
+#nav-toggle,
+#nav-toggle-close {
+    position: absolute;
+    top: 10px; /* Ajusta según sea necesario para posicionar correctamente los íconos */
+    right: 10px; /* Ajusta según sea necesario para posicionar correctamente los íconos */
+    z-index: 20; /* Debe ser mayor que el z-index del fondo del menú móvil */
+}
+
 h1 {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
@@ -94,6 +103,7 @@ h1 {
     display: ruby;
   }
 }
+/* CSS existente para el menú móvil */
 .mobile-menu {
   display: none;
   position: fixed;
@@ -115,7 +125,8 @@ h1 {
 .mobile-nav ul {
   list-style: none;
   padding: 0;
-  text-align: center;
+  text-align: left;
+  margin-right: 200px;
 }
 
 .mobile-nav ul li {
@@ -123,13 +134,61 @@ h1 {
 }
 
 .mobile-nav ul li a {
-  color: #fff;
+  color: black;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .mobile-menu.active {
   display: block;
+  height: 450px;
+  background: #fff;
+}
+
+/* Nuevos estilos para asegurar la visibilidad de los íconos */
+.site-header {
+  position: relative; /* Necesario para que z-index funcione */
+  z-index: 1000; /* Mayor que el z-index del menú móvil */
+}
+
+#nav-toggle-container {
+  position: absolute;
+  top: 10px; /* Ajusta según sea necesario */
+  right: 10px; /* Ajusta según sea necesario */
+  z-index: 1001; /* Mayor que el z-index del menú móvil y del header */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px; /* Ajusta según el tamaño de tus iconos */
+  height: 40px; /* Ajusta según el tamaño de tus iconos */
+}
+
+#nav-toggle,
+#nav-toggle-close {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%; /* Ajusta según sea necesario */
+  height: 100%; /* Ajusta según sea necesario */
+}
+
+#nav-toggle,
+#nav-toggle-close {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (min-width: 375px ) and (max-width: 992px) {
@@ -146,7 +205,6 @@ h1 {
   }
   #nav-toggle {
     display: flex;
-    margin-top: 10px;
     visibility: visible;
   }
   .hero {
@@ -163,6 +221,7 @@ h1 {
   h1 {
     text-align: center;
   }
+
 }
 
 
