Changed css code

--- a/wp-content/themes/maria/scss/_footer.scss
+++ b/wp-content/themes/maria/scss/_footer.scss
@@ -15,6 +15,7 @@ footer {
       font-family: Arial, Helvetica, sans-serif;
       text-align: left;
       display: grid;
+      margin-top: 35px;
     }
 
     .tele,
@@ -22,6 +23,7 @@ footer {
       font-size: 16px;
       font-family: Arial, Helvetica, sans-serif;
       text-align: left;
+      line-height: 0.5;
     }
 
     .imagen {
