--- a/wp-content/themes/maria/scss/_arbetsprover.scss
+++ b/wp-content/themes/maria/scss/_arbetsprover.scss
@@ -4,8 +4,8 @@
       padding-bottom: 100px;
       display: grid;
       grid-template-columns:
-        minmax(250px, 1fr) minmax(250px, 1fr) minmax(250px, 1fr)
-        minmax(250px, 1fr);
+        minmax(280px, 1fr) minmax(280px, 1fr) minmax(280px, 1fr)
+        minmax(280px, 1fr);
     }
     .worksampletype {
       color: $color-nav-text;
@@ -17,7 +17,7 @@
       margin: -15px;
       border-radius: 8%;
       &:hover {
-        background-color: #d5d9c8;
+        background-color: rgba(213, 217, 200, 0.4);
       }
     }
   } 
@@ -26,13 +26,12 @@
       height: 108px;
       border-radius: 5px;
     }
-
     p {
       color: #061d25;
       font-size: 16px;
       font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.5;
     }
-  
     @media (min-width: 375px) and (max-width:992px) {
       .worksampletypes {
         text-align: center;
