--- a/wp-content/themes/maria/scss/_post.scss
+++ b/wp-content/themes/maria/scss/_post.scss
@@ -14,8 +14,9 @@
     padding: 15px;
     margin: -15px;
     border-radius: 15px;
+    line-height: 2;
     &:hover {
-      background-color: #d5d9c8;
+      background-color: rgba(213, 217, 200, 0.4);
     
     }
     .post-title{
