--- a/wp-content/themes/maria/scss/style.scss
+++ b/wp-content/themes/maria/scss/style.scss
@@ -30,7 +30,7 @@ a {
 }
 
 .site-header {
-  padding: 0 100px;
+  margin: 30px;
 
   .container {
     display: flex;
@@ -78,6 +78,7 @@ h1 {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 22px;
+  line-height: 4;
 }
 
 /* Post page */
