--- a/wp-content/themes/maria/scss/_index.scss
+++ b/wp-content/themes/maria/scss/_index.scss
@@ -1,8 +1,27 @@
 .single {
   .singles {
     margin-top: 100px;
+    width: 100%;
+  }
+  .post-thumbnail-singles {
+    padding-left: 110px;
+    img {
+      width: 90%;
+      height: 517px;
+    }
   }
 }
+.content-paragraf {
+  p {
+    color: #061d25;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+    width: 55%;
+    margin: 40px auto;
+  }
+}
+
 @media (min-width: 375px) {
   .single {
     .container {
