--- a/wp-content/themes/maria/scss/_footer.scss
+++ b/wp-content/themes/maria/scss/_footer.scss
@@ -68,7 +68,7 @@ footer {
 .lista {
   list-style-type: none;
 }
-.newsletter {
+/* .newsletter {
   form {
     display: flex;
     justify-content: space-between;
@@ -97,39 +97,8 @@ footer {
     width: 108px;
     height: 37px;
   }
-}
+} */
 
-.newsletter2{
-  form {
-    display: flex;
-    justify-content: space-between;
-  }
-  width: 95%;
-  border-radius: 8px;
-  border: 1px solid black;
-  padding: 5px 5px 5px 20px;
-  margin: 40px 0;
-  
-  button {
-    padding: 10px 16px;
-    border: none;
-    cursor: pointer;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    border-radius: 6px;
-    color: #ffffff;
-    background-color: #061d25;
-    width: 108px;
-    height: 37px;
-  }
-  input {
-    font-family: Helvetica, Arial, sans-serif;
-    border: none;
-    outline: none;
-    font-size: 15px;
-    background: transparent;
-  }
-}
 @media (min-width: 375px) and (max-width: 576px) {
   footer {
     .container {
