--- a/wp-content/themes/maria/scss/_testimonials.scss
+++ b/wp-content/themes/maria/scss/_testimonials.scss
@@ -1,35 +1,90 @@
-/* Estilos del modal */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+.testimonial {
+  background-color: #d5d9c824;
+  .container {
+    display: grid;
+    grid-template-columns: minmax(150px, 1fr) minmax(150px, 1fr) minmax(
+        150px,
+        1fr
+      );
+    padding-top: 100px;
+    padding-bottom: 100px;
+    gap: 150px;
+    margin-bottom: 100px;
+  }
+  .texter {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    .paragraph {
+      width: 245px;
+    }
+    .title {
+      font-weight: bold;
+    }
+  }
+  img {
+    width: 100%;
+    max-width: 120px;
+    height: auto;
+    margin-top: 50px;
+  }
 }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+@media  (min-width: 375px) and (max-width: 576px) {
+  .testimonial {
+    img{
+      margin-bottom: 30px;
+    }
+    .container{
+      text-align: center;
+    }
+    background-color: #d5d9c824;
+    .texter{
+      .paragraph{
+        width: auto;
+        text-align: center;
+      }
+      .title{
+        font-weight: bold;
+        text-align: center;
+      }
+    }
+    .container {
+      display: block;
+      padding-top: 100px;
+      padding-bottom: 100px;
+      gap: 150px;
+      margin-bottom: 100px;
+    }
+  }
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+@media  (min-width: 576px) and (max-width: 992px) {
+  .testimonial {
+    img{
+      margin-bottom: 30px;
+    }
+    .container{
+      text-align: center;
+    }
+    background-color: #d5d9c824;
+    .texter{
+      .paragraph{
+        width: auto;
+        text-align: center;
+      }
+      .title{
+        font-weight: bold;
+        text-align: center;
+      }
+    }
+    .container {
+      display: block;
+      padding-top: 100px;
+      padding-bottom: 100px;
+      gap: 150px;
+      margin-bottom: 100px;
+    }
+  }
 }
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
+
