--- a/wp-content/themes/maria/scss/_hero.scss
+++ b/wp-content/themes/maria/scss/_hero.scss
@@ -59,14 +59,37 @@
   }
 }
 
-@media (max-width: 554px){
+@media (min-width: 344px) and (max-width: 992px){
   .newsletter {
-    visibility: hidden;
-    display: block;
+    form {
+      display: flex;
+      justify-content: space-between;
+    }
+    width: 95%;
+    border-radius: 8px;
+    border: 2px solid black;
+    padding: 5px 5px 5px 20px;
+    margin: 40px 0;
+    input {
+      font-family: Helvetica, Arial, sans-serif;
+      border: none;
+      outline: none;
+      font-size: 15px;
+      background: transparent;
+    }
+    button {
+      padding: 10px 16px;
+      border: none;
+      cursor: pointer;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 15px;
+      border-radius: 6px;
+      color: #ffffff;
+      background-color: #061d25;
+      width: 115px;
+      height: 40px;
+    }
   }
-}
-
-@media (min-width: 992px) {
   .hero {
     .container {
       .left {
@@ -76,10 +99,9 @@
         }
       }
     }
-    .right {
-      margin-left: 100px;
-    }
   }
 }
+
+
 
 
