--- a/wp-content/themes/maria/scss/style.scss
+++ b/wp-content/themes/maria/scss/style.scss
@@ -100,7 +100,7 @@ h1 {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 22px;
-  line-height: 4;
+  line-height: 1.5;
 }
 
 /* Post page */
@@ -213,7 +213,14 @@ h1 {
   justify-content: center;
 }
 
-@media (min-width: 375px ) and (max-width: 992px) {
+@media (max-width: 539px) {
+  .column3, .newsletter{
+    visibility: hidden;
+    display: none;
+  }
+}
+
+@media (min-width: 344px ) and (max-width: 992px) {
   .site-header {
     padding: 0;
   }
@@ -242,6 +249,7 @@ h1 {
   }
   h1 {
     text-align: center;
+    line-height: 1.5;
   }
 
 }
