--- a/wp-content/themes/maria/scss/archive-arbetsprov.scss
+++ b/wp-content/themes/maria/scss/archive-arbetsprov.scss
@@ -15,6 +15,9 @@
 
         a{
             color: #BF5933;
+            i {
+                margin-left: 5px;
+            }
         }
     }
    
