--- a/wp-content/themes/maria/scss/_post.scss
+++ b/wp-content/themes/maria/scss/_post.scss
@@ -11,8 +11,7 @@
     text-align: left;
     background-color: transparent;
     transition: background-color 0.3s ease;
-    padding: 15px;
-    margin: -15px;
+    padding: 25px;
     border-radius: 15px;
     line-height: 2;
     &:hover {
@@ -27,7 +26,6 @@
     .texter {
       font-family: Arial, Helvetica, sans-serif;
       color: black;
-      width: 480px;
       h2 {
         font-weight: bold;
         font-size: 17px;
@@ -63,13 +61,14 @@
     color: white;
     background-color: #d89771;
     border-radius: 60px;
-    width: 96px;
-    height: 34px;
     font-size: 12px;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    display: inline-block;
+    padding:4px 10px;
+    margin:10px 0px 0px;
   }  
 }
 
